--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,26 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Create Release
 
-# Controls when the action will run.
 on:
   release:
     types: [created]
-  
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:  
-  # This workflow contains a single job called "build"
+
+jobs:
   build:
-    # The type of runner that the job will run on
     name: Build runner
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # Check out the repository
       - uses: actions/checkout@v4
+      
+      # Fetch release content
+      - name: Get release info
+        id: release-info
+        run: |
+          echo "Release tag: $(jq -r '.release.tag_name' $GITHUB_EVENT_PATH)"
+          echo "Release body: $(jq -r '.release.body' $GITHUB_EVENT_PATH)"
+          echo "Release name: $(jq -r '.release.name' $GITHUB_EVENT_PATH)"
+
+      # Optionally, use the fetched release info in further steps
+      - name: Use release info
+        run: |
+          echo "Using release tag: ${{ steps.release-info.outputs.tag_name }}"
