--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -2,7 +2,7 @@ name: PR to Markdown
 
 on:
   pull_request:
-    types: [opened, edited]
+    types: [opened, edited, synchronize]
 
 jobs:
   create-markdown:
