--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   create-markdown:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
