--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -16,13 +16,13 @@ jobs:
     - name: Get PR details
       id: pr_details
       run: |
-        PR_TITLE=${{ github.event.pull_request.title }}
-        PR_BODY=${{ github.event.pull_request.body }}
-        PR_BRANCH=${{ github.event.pull_request.head.ref }}
+        echo "PR_TITLE=${{ github.event.pull_request.title }}" >> $GITHUB_ENV
+        echo "PR_BODY=${{ github.event.pull_request.body }}" >> $GITHUB_ENV
+        echo "PR_BRANCH=${{ github.event.pull_request.head.ref }}" >> $GITHUB_ENV
 
     - name: Create Markdown file
       run: |
-        VERSION_BUMP=$(PR_TITLE node -p "process.env.PR_TITLE.split('|')[0].replaceAll(/\W/g, '').toLowerCase()")
+        VERSION_BUMP=$(PR_TITLE="${{ env.PR_TITLE }}" node -p "process.env.PR_TITLE.split('|')[0].replaceAll(/\W/g, '').toLowerCase()")
         PACKAGE_NAME=$(node -p "require('./package.json').name")
         FILENAME="pr-${{ github.event.number }}.md"
         FILEPATH=".changeset/$FILENAME"
