--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -38,6 +38,6 @@ jobs:
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git checkout ${{ env.PR_BRANCH }}
-        git add pr-${{ github.event.number }}.md
+        git add .
         git commit -m "Add PR #${{ github.event.number }} details"
         git push origin ${{ env.PR_BRANCH }}
