--- a/.github/workflows/create_changesets_file.yml
+++ b/.github/workflows/create_changesets_file.yml
@@ -38,7 +38,7 @@ jobs:
 
     - name: Commit and push markdown file to current branch
       run: |
-        git diff --exit-code --quiet || exit 0
+        git diff --exit-code --quiet && exit 0
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add .
