--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -28,6 +28,7 @@ jobs:
       
       - name: Bump up version
         run: |
+          npm install --omit=dev
           npx changeset version
           npx changeset publish
 
