--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -19,18 +19,35 @@ jobs:
 
       - uses: actions/setup-node@v4
 
+      - name: Check files and get content
+        run: |
+          FILES = $(ls .changeset/pr-*.md)
+
+          if [ ${#files[@]} -eq 0 ]; then
+            echo "No changeset files found"
+            exit 1
+          fi
+
+          if [ ${#files[@]} -gt 1 ]; then
+            echo "More than one changeset file found"
+            exit 1
+          fi
+
+          echo "RELEASE_FILE=$files[0]" >> $GITHUB_ENV
+          echo "RELEASE_CONTENT=$(cat $files[0])" >> $GITHUB_ENV
+
       - name: Copy changelogs
         run: |
           if [ ! -d "releases" ]; then
             mkdir releases
           fi
-          cp -r .changeset/pr-*.md releases/
+          cp .changeset/${{ env.RELEASE_FILE }} releases/${{ env.RELEASE_FILE }}
       
       - name: Bump up version
         run: |
           npm install --omit=dev
           npx changeset version
-          npx changeset publish
+          npx changeset tag
 
       - name: Commit and push markdown file to current branch
         run: |
@@ -39,3 +56,10 @@ jobs:
           git add .
           git commit -m "Bump up version"
           git push origin main --follow-tags
+
+      - uses: ncipollo/release-action@v1
+        with:
+          tag: $( git tag --sort=taggerdate | tail -1 )
+          body: ${{ env.RELEASE_CONTENT }}
+
+      
