--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -41,7 +41,7 @@ jobs:
           if [ ! -d "releases" ]; then
             mkdir releases
           fi
-          cp .changeset/${{ env.RELEASE_FILE }} releases/${{ env.RELEASE_FILE }}
+          cp ${{ env.RELEASE_FILE }} releases/${{ env.RELEASE_FILE }}
       
       - name: Bump up version
         run: |
