--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -41,7 +41,7 @@ jobs:
           echo "RELEASE_FILE=$FILE" >> $GITHUB_ENV
   
           cp .changeset/$FILE releases/$FILE
-          echo "RELEASE_CONTENT=$(cat releases/$FILE)" >> $GITHUB_ENV
+          echo "RELEASE_CONTENT=$(cat \"releases/$FILE\")" >> $GITHUB_ENV
       
       - name: Bump up version
         run: |
