--- a/.github/workflows/create_changesets_file.yml
+++ b/.github/workflows/create_changesets_file.yml
@@ -36,7 +36,10 @@ jobs:
 
     - name: Commit and push markdown file to current branch
       run: |
-        git diff --exit-code --quiet && exit 0
+        if [ -z "$(git status --porcelain)" ]; then
+          echo "No changes to commit"
+          exit 0
+        fi
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add .
